(Add new stuff at the top!)

* Merged in my latest changes into SVN repository.
* Arranged to avoid reading/writing textures at same time.
* Removed depth and stencil buffers from FBO's.
* Eliminated 1-component FBO that caused grief for FBO completeness test.
* Added back missing cubeShaderNoTexture.vert

------------------- FIRST ADDITION TO SUBVERSION ---------------------
GPUphysics-0.4
==============

* Test for availability of vertex shader textures.
* Fixed 'status: xxxx' message.
* Added support for running the demo in the absence of vertex shader textures.

GPUphysics-0.3
==============

* Use signed initial velocities so everything doesn't slide off the screen!
* The 'bounce' now slows down X/Z motion as well as Y so things actually
  do stop moving eventually.
* Caught up with some portability issues for more recent versions of
  GLSL.

GPUphysics-0.2
==============

* Added MacOSX support.
* Added a ton of command-line debug options (see DEBUG_README)
* Changed to ZLib license.

GPUphysics-0.1
==============

* Fixes for stencil buffer problems on some systems.

GPUphysics-0.0
==============

* Initial release
